--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>無題ドキュメント</title>
+</head>
 
+<body>
+<img src="jpg/1.jpg" width="656" height="450" alt=""/>
+<br></br>
+<img src="jpg/2.jpg" width="1023" height="450" alt=""/>
+<br></br>
+<img src="jpg/3.jpg" width="776" height="450" alt=""/>
+<br></br>
+<img src="jpg/4.jpg" width="433" height="450" alt=""/>
+<br></br>
+<img src="jpg/5.jpg" width="526" height="450" alt=""/>
+<br></br>
+<img src="jpg/6.jpg" width="527" height="450" alt=""/>
+<br></br>
+<img src="jpg/7.jpg" width="545" height="450" alt=""/>
+<br></br>
+<img src="jpg/8.jpg" width="337" height="450" alt=""/>
+<br></br>
+<img src="jpg/9.jpg" width="595" height="450" alt=""/>
+<br></br>
+<img src="jpg/10.jpg" width="848" height="450" alt=""/>
+<br></br>
+<img src="jpg/11.jpg" width="571" height="450" alt=""/>
+<br></br>
+<img src="jpg/12.jpg" width="789" height="450" alt=""/>
+<br></br>
+<img src="jpg/13.jpg" width="654" height="190" alt=""/>
+</body>
+</html>
